# sea-orm-demo

./: README.md
Rustonomicondemo/: Cargo.toml
Rustonomicondemo/src/: hello_macro.rs  main.rs
axum01/: Cargo.toml
axum01/src/: main.rs  readme.md
axum_examples/: readme.md
axum_examples/async-graphql/: Cargo.toml
debug-rs/: Cargo.toml
debug-rs/src/: main.rs
flutter_rust_bridge_demo01/: Cargo.toml
hyper01/: Cargo.toml
hyper01/src/: main.rs
lazy_static_demo01/: Cargo.toml
lazy_static_demo01/src/: main.rs
rbatis01/: Cargo.toml
reqwest01/: Cargo.toml
reqwest01/src/: main.rs
serde01/: Cargo.toml
serde01/src/: main.rs
serde02/: Cargo.toml
serde02/src/: main.rs
serde02/src/examples/: StructAndEnums.rs  default_value_for_a_field.rs  enum_representations.rs  mod.rs
tokio01/: Cargo.toml
tokio01/src/: main.rs
tonic01/: Cargo.toml
tonic01/src/: main.rs
tracing01/: Cargo.toml
tracing01/src/: main.rs
tracing01/src/log_demo/: long_rs.rs
