[package]
name = "axum01"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
tokio = {version ="1.20.1", features = ["full"]}
serde = "1.0.142"
serde_derive = "1.0.142"
# 这个地方解释下，对应程序中的引用
serde_json = "1.0.0"
# rustix = { version = "0.31.0", optional = true } 